--- a/app/views/results/common/_text_codeviewer.html.erb
+++ b/app/views/results/common/_text_codeviewer.html.erb
@@ -1,14 +1,13 @@
 <div id='standby_highlighting'>
   <%= t('common.highlighting') %>
 </div>
-<pre id='code' name='code' class='<%= @code_type %>' cols='80' rows='50'>
+<pre id='code' class='brush: <%= @code_type %>' cols='80' rows='50'>
   <%# This can't be indented, because the indention is preserved and shown in the code %>
 <%= file_contents %>
 </pre>
 
 <script>
-  dp.SyntaxHighlighter.ClipboardSwf = '/javascripts/syntaxhighlighter/clipboard.swf';
-  dp.SyntaxHighlighter.HighlightAll('code');
+  SyntaxHighlighter.all()
 
   document.getElementById('standby_highlighting').style.display = 'none';
 
@@ -19,7 +18,7 @@
 
   source_code_ready();
 
-  <% if (defined? annots) %>
+  <% if defined? annots %>
     <% if annots.respond_to?('each') %>
       <% annots.each do |annot| %>
         add_annotation_text(<%= annot.annotation_text.id %>,
@@ -34,7 +33,7 @@
     <% end %>
   <% end %>
 
-  <% if !@focus_line.nil? %>
+  <% unless @focus_line.nil? %>
     focus_source_code_line(<%= @focus_line %>);
   <% end %>
 </script>
